New Futures added to the AddNewITemViewController like tet field, button support, switch for share textField

--- a/To Do/AddNewItem.storyboard
+++ b/To Do/AddNewItem.storyboard
@@ -22,8 +22,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="write your TODO here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vhj-6Y-88I">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write your TODO here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vhj-6Y-88I">
                                 <rect key="frame" x="16" y="40" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ozz-s8-NdO">
+                                <rect key="frame" x="141" y="318" width="94" height="30"/>
+                                <state key="normal" title="Add to my list"/>
+                                <connections>
+                                    <action selector="newTodoAdded:" destination="HbN-Ut-9gT" eventType="touchUpInside" id="Tgz-Co-Tgs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="snz-DS-KAy">
+                                <rect key="frame" x="176" y="356" width="24" height="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" red="1" green="0.049691020330000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ske-H9-2oN">
+                                <rect key="frame" x="310" y="78" width="51" height="31"/>
+                                <connections>
+                                    <action selector="sharedContinueSwitchChanged:" destination="HbN-Ut-9gT" eventType="valueChanged" id="DCv-pZ-QeB"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share this item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vM9-jj-aPS">
+                                <rect key="frame" x="16" y="83" width="114.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Who would you like to share?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JSo-wI-YSb">
+                                <rect key="frame" x="16" y="112" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -31,18 +62,33 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="snz-DS-KAy" firstAttribute="top" secondItem="Ozz-s8-NdO" secondAttribute="bottom" constant="8" id="4ia-dh-WHv"/>
+                            <constraint firstItem="JSo-wI-YSb" firstAttribute="leading" secondItem="Vhj-6Y-88I" secondAttribute="leading" id="8l6-pA-nGp"/>
+                            <constraint firstItem="JSo-wI-YSb" firstAttribute="height" secondItem="Vhj-6Y-88I" secondAttribute="height" id="GW0-5H-eQP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Vhj-6Y-88I" secondAttribute="trailing" id="OcV-X4-iSk"/>
+                            <constraint firstItem="JSo-wI-YSb" firstAttribute="top" secondItem="vM9-jj-aPS" secondAttribute="bottom" constant="8" symbolic="YES" id="Ocg-f1-Yea"/>
+                            <constraint firstItem="vM9-jj-aPS" firstAttribute="leading" secondItem="pdE-0M-zCI" secondAttribute="leadingMargin" id="Xqz-st-vTF"/>
+                            <constraint firstItem="Ske-H9-2oN" firstAttribute="trailing" secondItem="Vhj-6Y-88I" secondAttribute="trailing" id="Z0s-vw-DE0"/>
                             <constraint firstItem="Vhj-6Y-88I" firstAttribute="top" secondItem="meM-sy-FHn" secondAttribute="bottom" constant="20" id="dwC-9u-J4v"/>
+                            <constraint firstItem="snz-DS-KAy" firstAttribute="centerX" secondItem="pdE-0M-zCI" secondAttribute="centerX" id="edL-Be-szl"/>
+                            <constraint firstItem="Ske-H9-2oN" firstAttribute="top" secondItem="Vhj-6Y-88I" secondAttribute="bottom" constant="8" id="fdT-xl-u7D"/>
+                            <constraint firstItem="Ozz-s8-NdO" firstAttribute="centerX" secondItem="pdE-0M-zCI" secondAttribute="centerX" id="gYF-Rr-0PD"/>
                             <constraint firstItem="Vhj-6Y-88I" firstAttribute="leading" secondItem="pdE-0M-zCI" secondAttribute="leadingMargin" id="jEJ-ur-fs2"/>
+                            <constraint firstItem="vM9-jj-aPS" firstAttribute="centerY" secondItem="Ske-H9-2oN" secondAttribute="centerY" id="wfI-4D-oQo"/>
+                            <constraint firstItem="Ozz-s8-NdO" firstAttribute="centerY" secondItem="pdE-0M-zCI" secondAttribute="centerY" id="ymX-SL-Ocy"/>
+                            <constraint firstItem="JSo-wI-YSb" firstAttribute="width" secondItem="Vhj-6Y-88I" secondAttribute="width" id="zRv-sj-VjL"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="errorMessage" destination="snz-DS-KAy" id="aer-6C-0We"/>
+                        <outlet property="shareEmailTextField" destination="JSo-wI-YSb" id="Pgo-FG-hOQ"/>
+                        <outlet property="sharedContinueSwitch" destination="Ske-H9-2oN" id="87Q-mI-Amb"/>
                         <outlet property="todoTextField" destination="Vhj-6Y-88I" id="XaB-PV-WJC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ECz-MT-yyd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="145"/>
+            <point key="canvasLocation" x="52" y="144.3778110944528"/>
         </scene>
     </scenes>
 </document>
