--- a/To Do/ListItemsView.storyboard
+++ b/To Do/ListItemsView.storyboard
@@ -22,25 +22,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MnK-0y-D9Q">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="473" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MnK-0y-D9Q">
                                 <rect key="frame" x="16" y="0.0" width="343" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemListCell" rowHeight="200" id="3oO-HO-pw2" customClass="ListItemTableViewCell" customModule="To_Do" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="200"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemListCell" rowHeight="473" id="3oO-HO-pw2" customClass="ListItemTableViewCell" customModule="To_Do" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="473"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3oO-HO-pw2" id="qSk-8L-Zvn">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="199.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="473"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You dont have any todo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4iF-Rc-hed">
-                                                    <rect key="frame" x="8" y="8" width="343" height="20.5"/>
+                                                    <rect key="frame" x="8" y="8" width="343" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKq-IN-Mt4">
-                                                    <rect key="frame" x="10" y="28.5" width="229" height="19"/>
+                                                    <rect key="frame" x="10" y="29" width="229" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="229" id="1JB-NL-e8t"/>
                                                         <constraint firstAttribute="height" constant="19" id="CvO-je-q4o"/>
@@ -52,19 +52,52 @@
                                                         <action selector="sharedButtonPressed:" destination="3oO-HO-pw2" eventType="touchUpInside" id="9md-YT-icx"/>
                                                     </connections>
                                                 </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen" translatesAutoresizingMaskIntoConstraints="NO" id="RtL-Ql-hbN">
+                                                    <rect key="frame" x="28" y="78" width="222" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="ZsY-bz-AeM"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eea-Mp-Os6">
+                                                    <rect key="frame" x="8" y="221" width="121" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="121" id="D52-5n-lF6"/>
+                                                    </constraints>
+                                                    <state key="normal" title="I am done"/>
+                                                    <connections>
+                                                        <action selector="doneButtonPressed:" destination="3oO-HO-pw2" eventType="touchUpInside" id="0qC-fJ-Ynl"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GgZ-ns-ibr">
+                                                    <rect key="frame" x="214" y="221" width="121" height="30"/>
+                                                    <state key="normal" title="Edit"/>
+                                                    <connections>
+                                                        <action selector="editButtonPressed:" destination="3oO-HO-pw2" eventType="touchUpInside" id="ZD2-Bf-Co6"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="RtL-Ql-hbN" secondAttribute="trailing" constant="85" id="1k7-bP-l34"/>
+                                                <constraint firstItem="GgZ-ns-ibr" firstAttribute="width" secondItem="Eea-Mp-Os6" secondAttribute="width" id="BFO-CD-CsA"/>
+                                                <constraint firstItem="Eea-Mp-Os6" firstAttribute="top" secondItem="RtL-Ql-hbN" secondAttribute="bottom" constant="15" id="G88-0A-Clp"/>
+                                                <constraint firstItem="GgZ-ns-ibr" firstAttribute="trailing" secondItem="qSk-8L-Zvn" secondAttribute="trailingMargin" id="GW4-KT-mdz"/>
+                                                <constraint firstItem="RtL-Ql-hbN" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" constant="20" id="M4M-Ke-Gdg"/>
+                                                <constraint firstItem="Eea-Mp-Os6" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" id="MFx-st-O08"/>
+                                                <constraint firstItem="RtL-Ql-hbN" firstAttribute="top" secondItem="YKq-IN-Mt4" secondAttribute="bottom" constant="30" id="Rty-pQ-RMC"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="width" secondItem="qSk-8L-Zvn" secondAttribute="width" id="Yqs-4w-Xia"/>
                                                 <constraint firstItem="YKq-IN-Mt4" firstAttribute="top" secondItem="4iF-Rc-hed" secondAttribute="bottom" id="Yrr-ng-D9h"/>
                                                 <constraint firstItem="YKq-IN-Mt4" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leading" constant="10" id="Z23-rd-rfR"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="top" secondItem="qSk-8L-Zvn" secondAttribute="topMargin" id="pVf-tu-DhI"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" id="sfM-7b-xZr"/>
+                                                <constraint firstItem="GgZ-ns-ibr" firstAttribute="centerY" secondItem="Eea-Mp-Os6" secondAttribute="centerY" id="tC3-54-Rc7"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="sharedButton" destination="YKq-IN-Mt4" id="H0W-df-oI9"/>
                                             <outlet property="sharedEmailChange" destination="YKq-IN-Mt4" id="62T-i6-VRx"/>
                                             <outlet property="todoLabel" destination="4iF-Rc-hed" id="gz7-mL-ofF"/>
+                                            <outlet property="uiimage" destination="RtL-Ql-hbN" id="7bu-bH-CFE"/>
+                                            <outlet property="uimageConstraint" destination="ZsY-bz-AeM" id="EVU-Va-lky"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -94,4 +127,7 @@
             <point key="canvasLocation" x="1792.8" y="-288.30584707646182"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Screen" width="1520" height="1006"/>
+    </resources>
 </document>
