--- a/To Do/ListItemsView.storyboard
+++ b/To Do/ListItemsView.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,8 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="473" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MnK-0y-D9Q">
-                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="473" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MnK-0y-D9Q">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemListCell" rowHeight="473" id="3oO-HO-pw2" customClass="ListItemTableViewCell" customModule="To_Do" customModuleProvider="target">
@@ -40,10 +41,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKq-IN-Mt4">
-                                                    <rect key="frame" x="10" y="29" width="229" height="19"/>
+                                                    <rect key="frame" x="271" y="29" width="46" height="19"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="229" id="1JB-NL-e8t"/>
-                                                        <constraint firstAttribute="height" constant="19" id="CvO-je-q4o"/>
+                                                        <constraint firstAttribute="height" constant="19" id="CMI-6l-Yo8"/>
                                                     </constraints>
                                                     <state key="normal" title="Button">
                                                         <color key="titleColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -75,26 +75,49 @@
                                                         <action selector="ButtonPressed:" destination="3oO-HO-pw2" eventType="touchUpInside" id="ar5-KE-Nnu"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2q-ci-yD0">
+                                                    <rect key="frame" x="92" y="27" width="251" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="251" id="TaI-NM-VzM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shared with: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpC-lK-RAC">
+                                                    <rect key="frame" x="8" y="27" width="82" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="RtL-Ql-hbN" secondAttribute="trailing" constant="85" id="1k7-bP-l34"/>
+                                                <constraint firstAttribute="trailing" secondItem="H2q-ci-yD0" secondAttribute="trailing" id="207-Sq-qdy"/>
+                                                <constraint firstItem="RtL-Ql-hbN" firstAttribute="top" secondItem="YKq-IN-Mt4" secondAttribute="bottom" constant="30" id="5pX-Jb-dKS"/>
                                                 <constraint firstItem="GgZ-ns-ibr" firstAttribute="width" secondItem="Eea-Mp-Os6" secondAttribute="width" id="BFO-CD-CsA"/>
+                                                <constraint firstItem="tpC-lK-RAC" firstAttribute="leading" secondItem="4iF-Rc-hed" secondAttribute="leading" id="Dh4-YN-iex"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="YKq-IN-Mt4" secondAttribute="trailing" constant="18" id="EQC-OV-xtu"/>
+                                                <constraint firstItem="YKq-IN-Mt4" firstAttribute="top" secondItem="4iF-Rc-hed" secondAttribute="bottom" id="Fd9-8F-grZ"/>
                                                 <constraint firstItem="Eea-Mp-Os6" firstAttribute="top" secondItem="RtL-Ql-hbN" secondAttribute="bottom" constant="15" id="G88-0A-Clp"/>
                                                 <constraint firstItem="GgZ-ns-ibr" firstAttribute="trailing" secondItem="qSk-8L-Zvn" secondAttribute="trailingMargin" id="GW4-KT-mdz"/>
                                                 <constraint firstItem="RtL-Ql-hbN" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" constant="20" id="M4M-Ke-Gdg"/>
                                                 <constraint firstItem="Eea-Mp-Os6" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" id="MFx-st-O08"/>
-                                                <constraint firstItem="RtL-Ql-hbN" firstAttribute="top" secondItem="YKq-IN-Mt4" secondAttribute="bottom" constant="30" id="Rty-pQ-RMC"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="width" secondItem="qSk-8L-Zvn" secondAttribute="width" id="Yqs-4w-Xia"/>
-                                                <constraint firstItem="YKq-IN-Mt4" firstAttribute="top" secondItem="4iF-Rc-hed" secondAttribute="bottom" id="Yrr-ng-D9h"/>
-                                                <constraint firstItem="YKq-IN-Mt4" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leading" constant="10" id="Z23-rd-rfR"/>
+                                                <constraint firstItem="tpC-lK-RAC" firstAttribute="firstBaseline" secondItem="H2q-ci-yD0" secondAttribute="firstBaseline" id="axZ-Nb-Jz3"/>
+                                                <constraint firstItem="H2q-ci-yD0" firstAttribute="top" secondItem="qSk-8L-Zvn" secondAttribute="topMargin" constant="19" id="f3R-kI-beP"/>
+                                                <constraint firstItem="H2q-ci-yD0" firstAttribute="bottom" secondItem="YKq-IN-Mt4" secondAttribute="bottom" id="jVp-Gc-iCz"/>
+                                                <constraint firstItem="tpC-lK-RAC" firstAttribute="baseline" secondItem="H2q-ci-yD0" secondAttribute="baseline" id="pBh-0B-od4"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="top" secondItem="qSk-8L-Zvn" secondAttribute="topMargin" id="pVf-tu-DhI"/>
                                                 <constraint firstItem="4iF-Rc-hed" firstAttribute="leading" secondItem="qSk-8L-Zvn" secondAttribute="leadingMargin" id="sfM-7b-xZr"/>
                                                 <constraint firstItem="GgZ-ns-ibr" firstAttribute="centerY" secondItem="Eea-Mp-Os6" secondAttribute="centerY" id="tC3-54-Rc7"/>
+                                                <constraint firstItem="H2q-ci-yD0" firstAttribute="leading" secondItem="tpC-lK-RAC" secondAttribute="trailing" constant="2" id="tEc-jr-3mf"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="sharedButton" destination="YKq-IN-Mt4" id="H0W-df-oI9"/>
                                             <outlet property="sharedEmailChange" destination="YKq-IN-Mt4" id="62T-i6-VRx"/>
+                                            <outlet property="sharedWithLabel" destination="H2q-ci-yD0" id="Sr5-QC-SQo"/>
                                             <outlet property="todoLabel" destination="4iF-Rc-hed" id="gz7-mL-ofF"/>
                                             <outlet property="uiimage" destination="RtL-Ql-hbN" id="7bu-bH-CFE"/>
                                             <outlet property="uimageConstraint" destination="ZsY-bz-AeM" id="EVU-Va-lky"/>
