--- a/To Do/ListItemsView.storyboard
+++ b/To Do/ListItemsView.storyboard
@@ -55,6 +55,7 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RtL-Ql-hbN">
                                                     <rect key="frame" x="28" y="78" width="222" height="128"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="M5M-DM-eD0"/>
                                                         <constraint firstAttribute="height" constant="128" id="ZsY-bz-AeM"/>
                                                     </constraints>
                                                 </imageView>
@@ -120,6 +121,7 @@
                                             <outlet property="sharedWith" destination="tpC-lK-RAC" id="pkG-RU-gVd"/>
                                             <outlet property="sharedWithLabel" destination="H2q-ci-yD0" id="Sr5-QC-SQo"/>
                                             <outlet property="todoLabel" destination="4iF-Rc-hed" id="gz7-mL-ofF"/>
+                                            <outlet property="uiImageViewHeightConstraint" destination="M5M-DM-eD0" id="WOx-Jd-a0p"/>
                                             <outlet property="uiimage" destination="RtL-Ql-hbN" id="7bu-bH-CFE"/>
                                             <outlet property="uimageConstraint" destination="ZsY-bz-AeM" id="EVU-Va-lky"/>
                                         </connections>
@@ -133,10 +135,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YDg-PD-7IU" firstAttribute="top" secondItem="MnK-0y-D9Q" secondAttribute="bottom" id="EIs-tC-P5B"/>
+                            <constraint firstItem="YDg-PD-7IU" firstAttribute="top" secondItem="MnK-0y-D9Q" secondAttribute="bottom" constant="20" id="EIs-tC-P5B"/>
                             <constraint firstItem="MnK-0y-D9Q" firstAttribute="leading" secondItem="KGQ-nd-saH" secondAttribute="leadingMargin" id="Qwq-tH-Oan"/>
                             <constraint firstItem="MnK-0y-D9Q" firstAttribute="leading" secondItem="KGQ-nd-saH" secondAttribute="leadingMargin" id="SQb-lN-7Ph"/>
-                            <constraint firstItem="YDg-PD-7IU" firstAttribute="top" secondItem="MnK-0y-D9Q" secondAttribute="bottom" id="XCg-bD-x8g"/>
                             <constraint firstItem="MnK-0y-D9Q" firstAttribute="trailing" secondItem="KGQ-nd-saH" secondAttribute="trailingMargin" id="Y6m-f6-bgt"/>
                             <constraint firstItem="MnK-0y-D9Q" firstAttribute="top" secondItem="7uY-ga-srh" secondAttribute="bottom" id="kT2-io-MdV"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MnK-0y-D9Q" secondAttribute="trailing" id="lsu-1A-5HU"/>
